# datadog-api-client-go

./: .apigentools-info  .dockerignore  .env  .generated-info  .gitignore  .licensed.yml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile.canary  Dockerfile.test.v1  LICENSE  LICENSE-3rdparty.csv  Makefile  NOTICE  README.md  RELEASING.md  TESTING.md  api_metrics_test.go  check-examples.sh  codecov.yml  doc.go  docker-compose.generator.yaml  docker-compose.yml  extract-code-blocks.awk  extract-code-blocks.sh  generate.sh  get-test-deps.sh  go.mod  go.sum  index.html  openapitools.json  repository.datadog.yaml  run-bdd-tests.sh  run-go-tests.sh  run-tests.sh  test_program.go  utils.go  (+1 more)
.generator/: conftest.py  openapitools.json  pyproject.toml
.generator/config/: v1.json  v2.json
.generator/schemas/v1/: openapi.yaml
.generator/schemas/v2/: openapi.yaml
.generator/src/generator/: cli.py  formatter.py  go_formatter.py  openapi.py  utils.py
.generator/src/generator/templates/: api.j2  api_client.j2  api_error.j2  aws.j2  client.j2  configuration.j2  delegated_auth.j2  doc.j2  encoding_json.j2  example.j2  example_aws.j2  goccy_gojson.j2  model.j2  model_enum.j2  model_oneof.j2  model_simple.j2  no_zstd.j2  nullable_model.j2  partial_header.j2  (+4 more)
.generator/templates/: api.mustache  api_doc.mustache  client.mustache  configuration.mustache  model.mustache  model_doc.mustache  model_enum.mustache  model_oneof.mustache  model_simple.mustache  partial_header.mustache  utils.mustache
.generator/tests/: test_formatter.py
(+30519 files in other folders)
