[tool.poetry]
name = "generator"
version = "0.1.0"
description = ""
authors = ["Datadog <support@datadoghq.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.4"
PyYAML = "^6.0"
jsonref = "^1.1.0"
jinja2 = "^3.1.4"
pytest = "^7.4.0"
pytest-bdd = "^6.1.1"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
